src/css/index.css
@import "bootstrap/dist/css/bootstrap.css";
@import "bootstrap-icons/font/bootstrap-icons.css";

.disable-link-style {
  color: inherit;
  text-decoration: inherit;
}

.form-wrapper {
  width: 100%;
  max-width: 460px;
}

.loading {
  position: relative;
}

.loading::before {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: #fff;
  z-index: 1001;
}

.loading::after {
  content: "";
  display: block;
  width: 50px;
  height: 50px;
  border: 2px solid #000;
  border-color: transparent #000 #000 #000;
  border-radius: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  animation: loading-animation 1s linear infinite;
  z-index: 1002;
}

@keyframes loading-animation {
  from {
    transform: rotate(0);
  }
  to {
    transform: rotate(360deg);
  }
}

.guest-only, .user-only {
  display: none;
}

.place-order-hide {
  animation: place-order-hide-animation 0.25s ease forwards;
}

.place-order-show {
  animation: place-order-hide-animation 0.25s ease reverse backwards;
}

@keyframes place-order-hide-animation {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.checkmark {
  position: relative;
  width: 150px;
  height: 150px;
  border: 5px solid #007bff;
  border-radius: 100%;
}

.checkmark-inner {
  position: absolute;
  left: 50%;
  top: 50%;
  width: 60px;
  height: 30px;
  transform: translate(-31px) rotate(-43deg);
  transform-origin: 0 0;
  animation: checkmark-animation 0.5s ease-out;
}

.checkmark-inner::before {
  content: "";
  display: block;
  position: absolute;
  width: 10px;
  left: -5px;
  top: -5px;
  bottom: -5px;
  background: #007bff;
}

.checkmark-inner::after {
  content: "";
  display: block;
  position: absolute;
  left: -5px;
  right: -5px;
  bottom: -5px;
  height: 10px;
  background: #007bff;
}

@keyframes checkmark-animation {
  0%   {width: 0px; height: 0px;}
  50%  {width: 0px; height: 30px;}
  100%  {width: 60px; height: 30px;}
}

